add fields to form

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -177,8 +177,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-family: 'Roboto', sans-serif;
   }
   
-  input.email, input.text.w3lpass {
-    margin: 2em 0;
+  input.email, input.text.w3lpass, input.text {
+    margin: 1em 0;
   }
   
   .text:focus, .text:valid {
