--- a/public/css/cocoon/main.css
+++ b/public/css/cocoon/main.css
@@ -31,7 +31,7 @@ body {
   line-height: 1.6;
   font-weight: 300;
   font-family: "Montserrat", sans-serif;
-  color: #9c9ca9;
+  color: #333842;
   font-style: normal;
   overflow-x: hidden;
 }
@@ -39,13 +39,17 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  color: #18181c;
+  color: #333842;
   line-height: 1.3;
+  text-transform: capitalize;
 }
 
 h1, .h1 {
   font-size: 42px;
   margin-bottom: 25px;
+  /*
+  text-decoration: underline;
+   */
 }
 
 h2, .h2 {
@@ -79,7 +83,7 @@ p {
   margin: 0 0 15px;
   line-height: 2.1;
   font-weight: 300;
-  color: #9c9ca9;
+  color: #474B54;
 }
 p:last-child {
   margin-bottom: 0;
@@ -100,7 +104,7 @@ a:focus,
 a:active {
   text-decoration: none;
   outline: none;
-  color: #9c9ca9;
+  color: #474B54;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -1581,7 +1585,7 @@ img {
 }
 
 .menu_block {
-  background-color: #f2f2f2;
+  background-color: #ffe9d4;
   min-height: 100vh;
   padding: 0;
 }
@@ -1594,7 +1598,7 @@ img {
 }
 .menu_block .side_title {
   padding-left: 50px;
-  /* color: #99896e; */
+  color: #333842;
   text-transform: capitalize;
   font-size: 15px;
   margin-bottom: 25px;
@@ -1611,12 +1615,12 @@ img {
 }
 .menu_block .copy_right {
   padding: 25px;
-  color: #99896e;
+  color: #555;
   margin-top: 50px;
 }
 .menu_block .copy_right p {
-  color: #99896e;
-  font-size: 12px;
+  color: #555;
+  font-size: 10px;
   text-align: center;
   font-weight: 500;
 }
@@ -1637,17 +1641,18 @@ img {
   display: inline-block;
   padding: 12px 25px 12px 50px;
   background-color: transparent;
-  color: #000000;
+  color: #333842;
 }
 .menu_nav li a:hover {
-  background-color: #99896e;
+  background-color: #74c366;
   color: #ffffff;
 }
 .menu_nav li a:focus {
-  background-color: #99896e;
+  background-color: #e0ffa8;
+  color: #555
 }
 .menu_nav li.active a {
-  background-color: #99896e;
+  background-color: #88d566;
   color: #ffffff;
 }
 .menu_nav .sub-menu {
@@ -1655,7 +1660,7 @@ img {
   right: 0;
   left: 100%;
   z-index: 999999;
-  background-color: #99896e;
+  background-color: #7B5566;
   padding: 10px;
   display: inline-block;
   min-width: 200px;
@@ -1683,14 +1688,14 @@ img {
   display: inline-block;
   padding: 8px 15px 8px 50px;
   text-transform: capitalize;
-  color: #000000;
+  color: #333842;
 }
 .filter_nav li a:hover {
-  background-color: #99896e;
+  background-color: #fe9851;
   color: #ffffff;
 }
 .filter_nav li.active a {
-  background-color: #99896e;
+  background-color: #ffad6a;
   color: #ffffff;
 }
 
@@ -1747,7 +1752,7 @@ img {
 3 body
 -------------------------------------------------------- */
 .body_block {
-  background-color: #ffffff;
+  background-color: #fefefe;
   padding: 50px 30px;
 }
 
@@ -2500,10 +2505,10 @@ textarea.form-control {
   display: block;
   width: 160px;
   height: 160px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
+  -webkit-border-radius: 35%;
+  -moz-border-radius: 35%;
+  -ms-border-radius: 35%;
+  border-radius: 35%;
   margin: 0 auto;
   margin-bottom: 15px; 
 }
@@ -2515,7 +2520,7 @@ textarea.form-control {
 #colorlib-aside #colorlib-logo a {
   display: inline-block;
   text-align: center;
-  color: #000000; 
+  color: #333842;
   font-weight: 700;
   font-size: 1em;
 }
