--- a/public/css/login.css
+++ b/public/css/login.css
@@ -115,14 +115,23 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: -o-linear-gradient(to top, #76b852, #8DC26F);
     background: linear-gradient(to top, #76b852, #8DC26F); */
 
-
-    background: rgba(212,228,239,1);
-    background: -moz-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
-    background: -webkit-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
-    background: -o-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
-    background: -ms-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
-    background: linear-gradient(to bottom, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+    255, 189, 107
+    background: rgba(255, 189, 107,0.65);
+    background: -moz-linear-gradient(top, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.65) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 189, 107,0.65)), color-stop(100%, rgba(158, 245, 102,0.65)));
+    background: -webkit-linear-gradient(top, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.65) 100%);
+    background: -o-linear-gradient(top, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.65) 100%);
+    background: -ms-linear-gradient(top, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.65) 100%);
+    background: linear-gradient(to bottom, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.655) 100%);
+    /*
+    background: rgba(231, 226, 238,1);
+    background: -moz-linear-gradient(top, rgba(231, 226, 238,1) 0%, rgba(130, 111, 151,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(231, 226, 238,1)), color-stop(100%, rgba(130, 111, 151,1)));
+    background: -webkit-linear-gradient(top, rgba(231, 226, 238,1) 0%, rgba(130, 111, 151,1) 100%);
+    background: -o-linear-gradient(top, rgba(231, 226, 238,1) 0%, rgba(130, 111, 151,1) 100%);
+    background: -ms-linear-gradient(top, rgba(231, 226, 238,1) 0%, rgba(130, 111, 151,1) 100%);
+    background: linear-gradient(to bottom, rgba(231, 226, 238,1) 0%, rgba(130, 111, 151,1) 100%);
+    */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=0 );
 
 
@@ -130,11 +139,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background-attachment: fixed;
     font-family: 'Roboto', sans-serif;
   }
-  
+
   h1 {
     font-size: 3em;
     text-align: center;
-    color: #fff;
+    color: #555;
     font-weight: 100;
     text-transform: capitalize;
     letter-spacing: 4px;
@@ -161,11 +170,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-size: 0.9em;
     color: #fff;
     font-weight: 100;
-    width: 94.5%;
+    width: 96%;
     display: block;
     border: none;
     padding: 0.8em;
     border: solid 1px rgba(255, 255, 255, 0.37);
+    border-radius: 5%;
     -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #fff 4%);
@@ -220,15 +230,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   input[type="submit"] {
     font-size: .9em;
     color: #fff;
-    background: #86aecc;
+    background: #afafaf;
     outline: none;
-    border: 1px solid #86aecc;
+    border: 1px solid #afafaf;
     cursor: pointer;
-    padding: 0.9em;
+    padding: 0.8em;
     -webkit-appearance: none;
     width: 100%;
     margin: 2em 0;
     letter-spacing: 4px;
+    border-radius: 5%;
   }
   
   input[type="submit"]:hover {
@@ -237,7 +248,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     -o-transition: .5s all;
     -ms-transition: .5s all;
     transition: .5s all;
-    background: #8DC26F;
+    background: #eeeeee;
+    color: #555;
+    border-radius: 5%;
   }
   
   .agileits-top p {
@@ -257,7 +270,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   }
   
   .agileits-top p a:hover {
-    color: #86aecc;
+    color: #555;
   }
   
   /*-- //main --*/
@@ -346,7 +359,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   
   .colorlibcopy-agile p {
     font-size: .9em;
-    color: #fff;
+    color: #555;
     line-height: 1.8em;
     letter-spacing: 1px;
     font-weight: 100;
