--- a/public/css/login.css
+++ b/public/css/login.css
@@ -115,7 +115,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: -o-linear-gradient(to top, #76b852, #8DC26F);
     background: linear-gradient(to top, #76b852, #8DC26F); */
 
-    255, 189, 107
     background: rgba(255, 189, 107,0.65);
     background: -moz-linear-gradient(top, rgba(255, 189, 107,0.65) 0%, rgba(158, 245, 102,0.65) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255, 189, 107,0.65)), color-stop(100%, rgba(158, 245, 102,0.65)));
@@ -164,6 +163,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   
   .agileits-top {
     padding: 3em;
+    /*
+    -webkit-transition: height 5s;
+    transition: height 5s;
+    height: 100%;
+    */
   }
   
   input[type="text"], input[type="email"], input[type="password"] {
@@ -175,7 +179,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border: none;
     padding: 0.8em;
     border: solid 1px rgba(255, 255, 255, 0.37);
-    border-radius: 5%;
     -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #fff 4%);
@@ -239,7 +242,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     width: 100%;
     margin: 2em 0;
     letter-spacing: 4px;
-    border-radius: 5%;
   }
   
   input[type="submit"]:hover {
@@ -250,7 +252,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     transition: .5s all;
     background: #eeeeee;
     color: #555;
-    border-radius: 5%;
   }
   
   .agileits-top p {
@@ -785,3 +786,4 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
       padding: 1em 0 0;
     }
   }
+
