--- a/public/css/login.css
+++ b/public/css/login.css
@@ -170,7 +170,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     */
   }
   
-  input[type="text"], input[type="email"], input[type="password"] {
+  input[type="text"], input[type="email"], input[type="password"], input[type="date"] {
     font-size: 0.9em;
     color: #fff;
     font-weight: 100;
