--- a/public/css/login.css
+++ b/public/css/login.css
@@ -798,3 +798,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .show {
   display: block!important;
 }
+
+.success {
+  
+  font-weight: bolder!important;
+}
+
+.error {
+  color: #ef1414!important;
+  font-weight: bolder!important;
+}
