--- a/public/css/cocoon/main.css
+++ b/public/css/cocoon/main.css
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   color: #333842;
   line-height: 1.3;
-  text-transform: capitalize;
+  /*text-transform: capitalize;*/
 }
 
 h1, .h1 {
