--- a/public/css/cocoon/main.css
+++ b/public/css/cocoon/main.css
@@ -2704,38 +2704,40 @@ textarea.form-control {
 
 .photo-container {
     background-color: #fafafa;
-    border: 1px solid #dddddd;
+    border: 0.5px solid #dddddd;
     padding-left: 6px;
     padding-right: 6px;
+    margin-bottom: 1.5em
 }
 
 .photo-user {
-    font-size: 17px;
+    font-size: 1rem;
     margin-top: 2px;
 }
 
 .photo-border {
     margin-bottom: 5px;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 0.5px solid #dddddd;
 }
 
 .photo-icons {
-    font-size: 17px;
+    font-size: 1rem;
     margin-top: 4px;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 0.5px solid #dddddd;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 3px;
     padding-bottom: 3px;
+    text-align: center;
 }
 
 .photo-container-description {
-    min-height: 120px;
+    min-height: 8.5rem;
 }
 
 .photo-description {
     display: inline-block;
-    font-size: 15px;
+    font-size: 0.9rem;
     line-height: 1.4;
     margin-top: 10px;
 }
