--- a/public/css/cocoon/main.css
+++ b/public/css/cocoon/main.css
@@ -2741,3 +2741,29 @@ textarea.form-control {
     line-height: 1.4;
     margin-top: 10px;
 }
+
+/*  ----------------------------------------------------
+13 class drag and drop
+-------------------------------------------------------- */
+
+#filedrag
+{
+    display: block;
+    font-weight: bold;
+    text-align: center;
+    padding: 1em 0;
+    margin: 1em 0;
+    color: #555;
+    border: 2px dashed #555;
+    border-radius: 7px;
+    cursor: default;
+    width: 30%;
+}
+
+#filedrag.hover
+{
+    color: #F7A878;
+    border-color: #F26E1E;
+    border-style: solid;
+    box-shadow: inset 0 3px 4px #888;
+}
